frontend/test/should_fail/computations_no_proc_method2.gm
node class N
{
	procedure foo()
	{
		return;
	}

	function bar() : int
	{
		this.foo();
		return(42);
	}
}
